correction safari

--- a/design.scss
+++ b/design.scss
@@ -633,11 +633,11 @@ footer {
 
 .endobujo{
 	img.id{width: 200px; display:flex;margin: 0 auto;}
-/*	.appear{
+	.appear{
 		margin: 0 auto;
 		visibility: hidden;
   		animation: imgappear 0.8s cubic-bezier(0,1,.65,1) 0.8s forwards;
-	}*/
+	}
 	.profil{
 		img{width: 60%;}
 		p{font-size: 1em;line-height: 1.6em;}
